--- a/app/build.gradle
+++ b/app/build.gradle
@@ -162,11 +162,17 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
 
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
+
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.github.chrisbanes:PhotoView:1.2.6'
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
     compile 'com.squareup:otto:1.3.8'
     compile 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.2'
@@ -178,7 +184,13 @@ dependencies {
     compile 'com.github.devlight.navigationtabbar:library:1.2.0'
     compile 'cn.pedant.sweetalert:library:1.3'
     compile 'jp.wasabeef:recyclerview-animators:2.2.3'
-    //compile "com.daimajia.swipelayout:library:1.2.0@aar"
+    compile "com.daimajia.swipelayout:library:1.2.0@aar"
     compile 'in.srain.cube:ultra-ptr:1.0.11'
+    compile 'com.appeaser.sublimepickerlibrary:sublimepickerlibrary:2.1.1'
+    compile 'com.zhy:percent-support-extends:1.1.1'
+    compile 'com.sothree.slidinguppanel:library:3.3.0'
 
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.daimajia.easing:library:1.0.1@aar'
+    compile 'com.daimajia.androidanimations:library:1.1.3@aar'
 }
