Add retrolambda support

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,16 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.getkeepsafe.dexcount'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
+
+    compileOptions {
+        encoding "UTF-8"
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
 
@@ -20,6 +28,10 @@ android {
         versionCode 1
         versionName "1.0"
         multiDexEnabled false
+
+//        jackOptions {
+//            enabled true
+//        }
     }
 
     signingConfigs {
