add section adapter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,11 @@
         android:theme="@style/AppTheme"
         tools:replace="android:label, android:icon">
         <activity android:name=".demo.DemoListActivity">
+        </activity>
+        <activity android:name=".demo.DemoRenderableAdapterActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
