--- a/app/build.gradle
+++ b/app/build.gradle
@@ -182,7 +182,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.4.0'
 
     compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+//    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
     compile 'com.squareup:otto:1.3.8'
 
