--- a/library_smart_location/build.gradle
+++ b/library_smart_location/build.gradle
@@ -46,5 +46,9 @@ android {
         targetCompatibility JavaVersion.VERSION_1_7
     }
 
+    lintOptions {
+        abortOnError false
+    }
+
 }
 
